--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
-            "es5BrowserSupport": true
+            "scripts": []
+            //"es5BrowserSupport": true
           },
           "configurations": {
             "production": {
@@ -100,5 +100,8 @@
       }
     }
   },
-  "defaultProject": "angular-essential-training"
+  "defaultProject": "angular-essential-training",
+  "cli": {
+    "analytics": false
+  }
 }
